# internal/model/request/expense_tracker.go
@@ -1,0 +1,14 @@
+package requestModel
+
+type ExpenseTracker struct {
+	ID       uint `json:"id,omitempty"`
+	IsActive *bool `json:"isActive,omitempty"`
+
+	PurchaseDate *string  `json:"purchaseDate,omitempty"`
+	BillNumber   string   `json:"billNumber"`
+	CompanyName  string   `json:"companyName"`
+	Material     string   `json:"material"`
+	Price         *float64 `json:"price,omitempty"`
+	Location      *string  `json:"location,omitempty"`
+	Notes         *string  `json:"notes,omitempty"`
+}
